Fixed Overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 html{
  font-size: 62.5%;
 }
+
 /* End of common styles */
 
 /* Navbar */
@@ -188,7 +189,6 @@ html{
 
 /*Section 2 */
 .section-2{
- background-color: rgb(240, 240, 240);
  display: flex;
  flex-direction: column;
  height: 100vh;
@@ -300,16 +300,19 @@ html{
 
 /*Section 3 */
 .section-3{
+ background-color: rgb(240, 240, 240);
  height: 100vh;
+ overflow: auto;
 }
 
 .section3-heading{
  font-size: 7rem;
  font-weight: 900;
- text-align: center;
- text-transform: capitalize;
  letter-spacing: 0.5rem;
  margin-top: 3rem;
+ overflow: hidden;
+ text-align: center;
+ text-transform: capitalize;
  text-shadow: .3rem .3rem .3rem #000;
 }
 
@@ -425,16 +428,46 @@ html{
 
 /* End of Section 3*/
 
+/* Section 3.5 */
+.between3and4{
+ display: flex;
+ height: 100vh;
+ justify-content: center;
+ position: relative;
+ text-align: center;
+ width: 100%;
+ flex-direction: column;
+}
+
+.serving-text{
+ font-family: 'Cormorant Garamond', serif;
+ font-size: 2rem;
+ font-weight: 600;
+ margin-top: 5rem;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+}
+
+.kusinaimg{
+ height: 50%;
+ border-radius: 50%;
+}
+
+/* End of Section 3.5 */
+
 /* Section 4 */
 .section-4{
  align-items: flex-start;
  background-color: rgb(57, 177, 57);
  display: flex;
- height: 20vh;
+ height: 15vh;
  justify-content: space-around;
  width: 100%;
  padding: 3rem 0;
  position: relative;
+ z-index: 3;
 }
 
 .section-4-text{
@@ -485,9 +518,9 @@ html{
 .copyright{
  border-top: .1rem solid white;
  color: white;
- bottom: 1rem;
+ bottom: 1.2rem;
  font-size: 1.3rem;
- padding-top: 1rem;
+ padding-top: 0.5rem;
  position: absolute;
  text-align: center;
  width: 100%;
